@@ -32,14 +32,14 @@
   <properties>
 
     <alfresco.pdf-renderer.version>1.1</alfresco.pdf-renderer.version>
-    <alfresco.platform.version>5.2.g</alfresco.platform.version>
-    <alfresco.share.version>5.2.f</alfresco.share.version>
-    <alfresco.sdk.version>3.1.0</alfresco.sdk.version>
+    <alfresco.platform.version>7.2.0.1</alfresco.platform.version>
+    <alfresco.share.version>7.0.0</alfresco.share.version>
+    <alfresco.sdk.version>4.4.0</alfresco.sdk.version>
 
     <!-- release-1 -->
     <bom.repository-repackaged.version>${project.version}</bom.repository-repackaged.version>
 
-    <java.version.range>[1.8.0, 9)</java.version.range>
+    <java.version.range>[11,)</java.version.range>
 
     <node.version.major>14</node.version.major>
     <node.version.minor>18</node.version.minor>
@@ -47,7 +47,7 @@
     <node.version>${node.version.major}.${node.version.minor}.${node.version.patch}</node.version>
 
     <npm.args.install>install</npm.args.install>
-    <npm.args.build>run build-dev</npm.args.build>
+    <npm.args.build>run build:edu-sharing</npm.args.build>
 
     <npm.version.major>7</npm.version.major>
     <npm.version.minor>24</npm.version.minor>
@@ -59,9 +59,9 @@
     <postgresql.jdbc.version.patch>0</postgresql.jdbc.version.patch>
     <postgresql.jdbc.version>${postgresql.jdbc.version.major}.${postgresql.jdbc.version.minor}.${postgresql.jdbc.version.patch}</postgresql.jdbc.version>
 
-    <tomcat.version.major>8</tomcat.version.major>
-    <tomcat.version.minor>5</tomcat.version.minor>
-    <tomcat.version.patch>84</tomcat.version.patch>
+    <tomcat.version.major>9</tomcat.version.major>
+    <tomcat.version.minor>0</tomcat.version.minor>
+    <tomcat.version.patch>70</tomcat.version.patch>
     <tomcat.version>${tomcat.version.major}.${tomcat.version.minor}.${tomcat.version.patch}
     </tomcat.version>
 
@@ -101,7 +101,11 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <runOrder>alphabetical</runOrder>
-            <argLine>-Xmx1024m</argLine>
+            <argLine>
+              -Xmx1024m
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+              --add-opens=java.base/java.util=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
 
@@ -123,6 +127,12 @@
               <version>${alfresco.sdk.version}</version>
             </dependency>
           </dependencies>
+        </plugin>
+
+        <plugin>
+          <groupId>org.openapitools</groupId>
+          <artifactId>openapi-generator-maven-plugin</artifactId>
+          <version>6.0.0</version>
         </plugin>
 
       </plugins>
@@ -164,14 +174,14 @@
 
       <dependency>
         <groupId>org.alfresco</groupId>
-        <artifactId>alfresco-platform-community-distributionzip</artifactId>
+        <artifactId>alfresco-content-services-community-distribution</artifactId>
         <version>${alfresco.platform.version}</version>
         <type>zip</type>
       </dependency>
 
       <dependency>
         <groupId>org.alfresco</groupId>
-        <artifactId>alfresco-platform-distribution</artifactId>
+        <artifactId>acs-community-packaging</artifactId>
         <version>${alfresco.platform.version}</version>
         <type>pom</type>
         <scope>import</scope>
@@ -179,8 +189,8 @@
 
       <dependency>
         <groupId>org.alfresco</groupId>
-        <artifactId>alfresco-solr4-distribution</artifactId>
-        <version>${alfresco.platform.version}</version>
+        <artifactId>alfresco-search-services</artifactId>
+        <version>2.0.3</version>
         <type>zip</type>
       </dependency>
 
@@ -192,15 +202,27 @@
       </dependency>
 
       <dependency>
-        <groupId>org.ow2.asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>9.1</version>
+        <groupId>org.alfresco</groupId>
+        <artifactId>alfresco-transform-model</artifactId>
+        <version>2.6.0</version>
       </dependency>
 
       <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjweaver</artifactId>
-        <version>1.8.9</version>
+        <groupId>org.alfresco</groupId>
+        <artifactId>alfresco-transformer-base</artifactId>
+        <version>2.6.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.alfresco</groupId>
+        <artifactId>alfresco-transform-tika</artifactId>
+        <version>2.6.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>9.2</version>
       </dependency>
 
       <dependency>
@@ -219,6 +241,12 @@
         <groupId>org.apache.axis</groupId>
         <artifactId>axis-jaxrpc</artifactId>
         <version>1.4</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpkix-jdk15on</artifactId>
+        <version>1.70</version>
       </dependency>
 
       <dependency>
@@ -270,37 +298,60 @@
         <type>amp</type>
       </dependency>
 
-      <!--
+
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>edu_sharing-community-repository-backend-alfresco-rest-client-auth-java</artifactId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-helm-postgresql</artifactId>
         <version>${project.version}</version>
+        <type>tar.gz</type>
+        <classifier>bin</classifier>
       </dependency>
 
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>edu_sharing-community-repository-backend-alfresco-rest-client-core-java</artifactId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-helm-solr</artifactId>
         <version>${project.version}</version>
+        <type>tar.gz</type>
+        <classifier>bin</classifier>
       </dependency>
 
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>edu_sharing-community-repository-backend-alfresco-rest-client-discovery-java</artifactId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-helm-rediscluster</artifactId>
         <version>${project.version}</version>
+        <type>tar.gz</type>
+        <classifier>bin</classifier>
       </dependency>
 
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>edu_sharing-community-repository-backend-alfresco-rest-client-search-java</artifactId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-helm-service</artifactId>
         <version>${project.version}</version>
+        <type>tar.gz</type>
+        <classifier>bin</classifier>
       </dependency>
 
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>edu_sharing-community-repository-backend-alfresco-rest-client-workflow-java</artifactId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-build-service</artifactId>
+        <version>${project.version}</version>
+        <classifier>sources</classifier>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-compose</artifactId>
         <version>${project.version}</version>
       </dependency>
-      -->
+
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>edu_sharing-community-repository-deploy-docker-helm-bundle</artifactId>
+        <version>${project.version}</version>
+        <type>tar.gz</type>
+        <classifier>bin</classifier>
+      </dependency>
 
       <dependency>
         <groupId>${project.groupId}</groupId>
@@ -420,6 +471,12 @@
 
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>edu_sharing-community-repository-backend-transform</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>edu_sharing-community-repository-config-cluster</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -441,6 +498,20 @@
         <artifactId>edu_sharing-community-repository-frontend</artifactId>
         <version>${project.version}</version>
         <classifier>sources</classifier>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>edu_sharing-community-repository-frontend</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>edu_sharing-community-repository-webapp</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
       </dependency>
 
       <dependency>
@@ -476,7 +547,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>11.0.2</version>
+        <version>30.1-jre</version>
       </dependency>
 
       <dependency>
@@ -613,7 +684,7 @@
 
       <dependency>
         <groupId>com.fasterxml.jackson.datatype</groupId>
-        <artifactId>jackson-datatype-jdk8</artifactId>
+        <artifactId>jackson-datatype-jdk11</artifactId>
         <version>2.12.1</version>
       </dependency>
 
@@ -624,39 +695,43 @@
       </dependency>
 
       <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency>
+
+      <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.0.1</version>
       </dependency>
 
       <dependency>
-        <groupId>org.glassfish.jersey.containers</groupId>
-        <artifactId>jersey-container-servlet-core</artifactId>
-        <version>2.22</version>
+        <groupId>jaxen</groupId>
+        <artifactId>jaxen</artifactId>
+        <version>1.2.0</version>
       </dependency>
 
       <dependency>
-        <groupId>org.glassfish.jersey.media</groupId>
-        <artifactId>jersey-media-jaxb</artifactId>
-        <version>2.22</version>
+        <groupId>org.glassfish.jersey</groupId>
+        <artifactId>jersey-bom</artifactId>
+        <version>2.40</version>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
 
       <dependency>
-        <groupId>org.glassfish.jersey.media</groupId>
-        <artifactId>jersey-media-json-jackson</artifactId>
-        <version>2.22</version>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-queryparser</artifactId>
+        <version>8.11.1</version>
       </dependency>
 
       <dependency>
-        <groupId>org.glassfish.jersey.media</groupId>
-        <artifactId>jersey-media-multipart</artifactId>
-        <version>2.22</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.glassfish.jersey.core</groupId>
-        <artifactId>jersey-server</artifactId>
-        <version>2.22</version>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-bom</artifactId>
+        <version>5.3.1</version>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
 
       <dependency>
@@ -748,7 +823,13 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.33</version>
+        <version>1.7.35</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+        <version>5.3.21</version>
       </dependency>
 
       <dependency>
@@ -758,41 +839,71 @@
       </dependency>
 
       <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-config</artifactId>
-        <version>3.1.7.RELEASE</version>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-commons</artifactId>
+        <version>2.7.15</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-mongodb</artifactId>
+        <version>3.4.15</version>
       </dependency>
 
       <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
-        <version>3.1.7.RELEASE</version>
+        <version>5.6.1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>5.6.1</version>
       </dependency>
 
       <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-web</artifactId>
-        <version>3.1.7.RELEASE</version>
+        <version>5.6.1</version>
       </dependency>
 
       <dependency>
         <groupId>org.springframework.security.extensions</groupId>
         <artifactId>spring-security-saml2-core</artifactId>
-        <!-- 1.0.4 and later breaks the HTTPS Checks, see https://github.com/spring-attic/spring-security-saml/issues/233 -->
-        <version>1.0.3.RELEASE</version>
+        <version>2.0.0.M31</version>
       </dependency>
 
       <dependency>
         <groupId>org.codehaus.woodstox</groupId>
         <artifactId>stax2-api</artifactId>
-        <version>3.1.4</version>
+        <version>4.2.1</version>
       </dependency>
 
       <dependency>
-        <groupId>io.swagger</groupId>
+        <groupId>io.swagger.core.v3</groupId>
         <artifactId>swagger-annotations</artifactId>
-        <version>1.6.3</version>
+        <version>2.1.11</version>
       </dependency>
+
+      <dependency>
+        <groupId>io.swagger.parser.v3</groupId>
+        <artifactId>swagger-parser</artifactId>
+        <version>2.1.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>2.1.1</version>
+      </dependency>
+
 
       <dependency>
         <groupId>io.swagger.core.v3</groupId>
@@ -853,6 +964,12 @@
         <groupId>org.mongodb</groupId>
         <artifactId>bson</artifactId>
         <version>${mongodb.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.9.3</version>
       </dependency>
 
       <dependency>
@@ -955,7 +1072,6 @@
         <groupId>com.graphql-java-kickstart</groupId>
         <artifactId>graphql-java-tools</artifactId>
         <version>13.0.3-edu-sharing</version>
-<!--        <version>edu-sharing-SNAPSHOT</version>-->
         <exclusions>
           <exclusion>
             <groupId>org.slf4j</groupId>
@@ -999,9 +1115,9 @@
       </dependency>
 
       <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-aspects</artifactId>
-        <version>3.2.17.RELEASE</version>
+        <groupId>org.reactivestreams</groupId>
+        <artifactId>reactive-streams</artifactId>
+        <version>1.0.3</version>
       </dependency>
 
       <dependency>
@@ -1014,6 +1130,20 @@
         <groupId>com.opencsv</groupId>
         <artifactId>opencsv</artifactId>
         <version>5.7.1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.santuario</groupId>
+        <artifactId>xmlsec</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+
+
+      <dependency>
+        <groupId>org.tukaani</groupId>
+        <artifactId>xz</artifactId>
+        <version>1.9</version>
+        <scope>compile</scope>
       </dependency>
 
     </dependencies>
@@ -1048,12 +1178,19 @@
       </snapshots>
     </repository>
 
+    <repository>
+      <id>alfresco-maven-repo</id>
+      <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
+    </repository>
+
   </repositories>
 
   <modules>
     <module>Backend</module>
     <module>config</module>
+    <module>deploy</module>
     <module>Frontend</module>
+    <module>webapp</module>
   </modules>
 
 </project>
